// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Shortcut> Snapshots With custom \`className\` 1`] = `
<a
  className="ys-shortcut camel"
  href="https://yousee.dk"
>
  <figure
    aria-hidden="true"
    className="ys-shortcut__icon-container"
  >
    <dummyIcon
      className="ys-shortcut__icon ys-icon"
    />
  </figure>
  <span
    className="ys-shortcut__title"
  >
    Musik
  </span>
</a>
`;

exports[`<Shortcut> Snapshots Without custom \`className\` 1`] = `
<a
  className="ys-shortcut"
  href="https://yousee.dk"
>
  <figure
    aria-hidden="true"
    className="ys-shortcut__icon-container"
  >
    <dummyIcon
      className="ys-shortcut__icon ys-icon"
    />
  </figure>
  <span
    className="ys-shortcut__title"
  >
    Musik
  </span>
</a>
`;
